# ner-ternary

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json
.github/workflows/: cicd.yml  semrel.yml
client/: CMakeLists.txt  README.md
client/libs/cli/: CMakeLists.txt
client/libs/cli/include/cli/: cli.hpp
client/libs/cli/src/: annotater.cpp  annotater.hpp  client.hpp  tsvCleaner.cpp  tsvCleaner.hpp
client/src/: main.cpp
lib/: node.cpp  node.hpp  processData.cpp  processData.hpp
proto/: CMakeLists.txt
proto/SearchTree/: searchtree.proto
server/: CMakeLists.txt
server/charts/tree-searcher-grpc-server/: Chart.yaml  values.yaml
server/charts/tree-searcher-grpc-server/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
server/lib/: node.cpp  node.hpp  processor.cpp  processor.hpp
server/service/: service.hpp
server/src/: main.cpp
server/tests/: node_test.cpp  processor_test.cpp
src/: main.cpp
src/cli/: annotater.hpp  cli.hpp  cli_handler.hpp  parallelAnnotater.hpp  tsvCleaner.hpp
src/lib/: node.hpp
test/: test.cpp
tests/: node_test.cpp  process_data_test.cpp
tests/test-data/: human_disease_knowledge_filtered.tsv  test2.txt
tests/test-data/text/: test1.txt
